// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
"## index.mjs

//#region index.ts
console.log("Hello, world!");

//#endregion"
`;

exports[`cjs import 1`] = `
"## index.js
"use strict";

//#region foo.ts
const foo = 1;

//#endregion
exports.foo = foo"
`;

exports[`cjs shims 1`] = `
"## index.js
"use strict";

//#region index.ts
var cjs_shims_default = [
	require("url").pathToFileURL(__filename).href,
	__filename,
	__dirname
];

//#endregion
module.exports = cjs_shims_default;"
`;

exports[`entry structure 1`] = `
"## index.mjs

## utils/index.mjs
"
`;

exports[`esm import 1`] = `
"## index.mjs

//#region foo.ts
const foo = 1;

//#endregion
export { foo };"
`;

exports[`esm shims 1`] = `
"## index.mjs
import path from "node:path";
import { fileURLToPath } from "node:url";

//#region ../../../assets/esm-shims.js
const getFilename = () => fileURLToPath(import.meta.url);
const getDirname = () => path.dirname(getFilename());
const __dirname = /* @__PURE__ */ getDirname();
const __filename = /* @__PURE__ */ getFilename();

//#endregion
//#region index.ts
var esm_shims_default = [__dirname, __filename];

//#endregion
export { esm_shims_default as default };"
`;

exports[`syntax lowering 1`] = `
"## index.mjs

//#region index.ts
var _a, _a$b;
const foo = (_a = a) === null || _a === void 0 || (_a$b = _a.b) === null || _a$b === void 0 ? void 0 : _a$b.call(_a);

//#endregion
export { foo };"
`;
